<resources>
    <string name="Cancel_Hide_APP">Unhide</string>
    <string name="Error_Cancel">Cancel</string>
    <string name="Error_Clear">Clear</string>
    <string name="Error_Message">Sorry, the Launcher has encountered the problem for three times. To solve the problem, please tap Clear. Doing this will restore default desktop layout and delete desktop backup files.</string>
    <string name="Error_title">Warning</string>
    <string name="Hide_Folder_Name">Hidden apps</string>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_promise_explanation">"The app for this icon isn't installed. You can remove it, or search for the app and install it manually."</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_search">Search</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_slice_error">"Couldn't connect"</string>
    <string name="abc_slice_more">More</string>
    <string name="abc_slice_more_content">+ %1$d</string>
    <string name="abc_slice_permission_allow">Allow</string>
    <string name="abc_slice_permission_checkbox">Allow %1$s to show slices from any app</string>
    <string name="abc_slice_permission_deny">Deny</string>
    <string name="abc_slice_permission_text_1">- It can read information from %1$s</string>
    <string name="abc_slice_permission_text_2">- It can take actions inside %1$s</string>
    <string name="abc_slice_permission_title">Allow %1$s to show %2$s slices?</string>
    <string name="abc_slice_show_more">Show more</string>
    <string name="abc_slice_updated">Updated %1$s</string>
    <string name="abc_slices_permission_request">%1$s wants to show %2$s slices</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_app_usage_settings">App usage settings</string>
    <string name="accessibility_close">Close</string>
    <string name="accessibility_recent_apps">Recent apps</string>
    <string name="accessibility_rotate_button">Rotate screen</string>
    <string name="action_add_to_workspace">Add to home screen</string>
    <string name="action_close">Close</string>
    <string name="action_decrease_height">Decrease height</string>
    <string name="action_decrease_width">Decrease width</string>
    <string name="action_deep_shortcut">Shortcut Menu</string>
    <string name="action_dismiss_notification">Dismiss</string>
    <string name="action_increase_height">Increase height</string>
    <string name="action_increase_width">Increase width</string>
    <string name="action_mode_done">Done</string>
    <string name="action_move">Move item</string>
    <string name="action_move_here">Move item here</string>
    <string name="ai_future_screen_summary">After activation, the AI desktop will be enabled.</string>
    <string name="ai_future_screen_title">AI desktop</string>
    <string name="all_apps_recommend_title">Recommended Apps</string>
    <string name="allow_rotation_title">Allow home screen rotation</string>
    <string name="app_icons_title">App icons</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_add_shortcuts_description">For new apps</string>
    <string name="auto_add_shortcuts_label">Add app icons to home screen</string>
    <string name="auto_align">App auto-fill</string>
    <string name="auto_align_summary">Auto-fill empty spaces when apps are removed</string>
    <string name="circle_screen_switch_summary">Go from last screen to first screen just by swiping</string>
    <string name="circle_screen_switch_title">Loop screens</string>
    <string name="custom_content_switch_summary">Recommend news and service info on this screen</string>
    <string name="custom_content_switch_title">Z-Board</string>
    <string name="custom_content_switch_title_selection">-1 screen</string>
    <string name="dialog_dont_remind_again">Do not remind me again</string>
    <string name="fancy_icon">App promotion reminder icon</string>
    <string name="fancy_icon_summary">Show a special icon when an app has special activities such as sales promotion</string>
    <string name="help_foldable_tips_content_1">1. It is recommended to use a protective case.</string>
    <string name="help_foldable_tips_content_2">"2. Don't press the screen too hard."</string>
    <string name="help_foldable_tips_content_3">3. When folding the phone, do not press hard on the folded area in the middle of the screen.</string>
    <string name="help_foldable_tips_content_4">4. Before folding the phone, please make sure there is no obvious foreign objects on the screen.</string>
    <string name="help_foldable_tips_content_5">5. Do not remove the protective film on the screen.</string>
    <string name="help_foldable_tips_title">Tips for cell phone use</string>
    <string name="help_minors_mode">The device supports the minor mode. You can tap the icon on the launcher to set the rules.</string>
    <string name="icon_bottom_target_label">Align with bottom</string>
    <string name="icon_top_target_label">Align with top</string>
    <string name="lock_home_screen_summary">Prevent changes to the desktop</string>
    <string name="lock_home_screen_title">Lock Home screen layout</string>
    <string name="main_menu_widget_new">Widget</string>
    <string name="menu_tab_effect">Effect</string>
    <string name="menu_tab_wallpaper">Wallpaper</string>
    <string name="screen_reorder">Drag a Home screen to reorder</string>
    <string name="settings_care_mode_sub_title_content1">Calling is faster with one tap on the contact icon</string>
    <string name="settings_care_mode_sub_title_content2">System is simpler with larger icons and texts</string>
    <string name="settings_care_mode_title_content">Faster and simpler</string>
    <string name="settings_concern_mode_button_content">TURN ON CARE MODE</string>
    <string name="settings_desktop_grid_title">Icon layout</string>
    <string name="settings_feature_phone_mode_button_open_content">TURN ON</string>
    <string name="settings_feature_phone_mode_sub_title_content1">Dial directly from the home screen,</string>
    <string name="settings_feature_phone_mode_sub_title_content2">simpler system with only essential apps</string>
    <string name="settings_feature_phone_mode_title_content">A more familiar feature phone home screen</string>
    <string name="settings_home_layout_title">Home screen mode</string>
    <string name="settings_home_screen_icon_title">Home screen icon</string>
    <string name="settings_home_screen_layout_title">Home screen layout</string>
    <string name="settings_icon_no_title">Wordless home screen</string>
    <string name="settings_icon_no_title_summary">Turn on to show apps, widgets and folders without names</string>
    <string name="settings_others_title">Others</string>
    <string name="settings_preference_key_add_icon_to_home">pref_add_icon_to_home</string>
    <string name="settings_preference_key_ai_future_screen">ai_future_screen</string>
    <string name="settings_preference_key_app_icons">settings_preference_key_app_icons</string>
    <string name="settings_preference_key_app_recommend">settings_preference_key_app_recommend</string>
    <string name="settings_preference_key_auto_align">settings_preference_key_auto_align</string>
    <string name="settings_preference_key_category_end">pref_category_end</string>
    <string name="settings_preference_key_category_home_icon_bottom">pref_category_home_icon_bottom</string>
    <string name="settings_preference_key_category_home_icon_top">pref_category_home_icon_top</string>
    <string name="settings_preference_key_category_home_layout">pref_category_home_layout</string>
    <string name="settings_preference_key_category_other">pref_category_other</string>
    <string name="settings_preference_key_circle_scroll">circle_scroll2</string>
    <string name="settings_preference_key_custom_page">custom_page2</string>
    <string name="settings_preference_key_custom_page_selection">custom_page_selection</string>
    <string name="settings_preference_key_desktop_clock">settings_preference_key_desktop_clock</string>
    <string name="settings_preference_key_desktop_grid">settings_preference_key_desktop_grid</string>
    <string name="settings_preference_key_fancy_icon">settings_preference_key_fancy_icon</string>
    <string name="settings_preference_key_home_layout">settings_preference_key_home_layout</string>
    <string name="settings_preference_key_icon_no_title">settings_preference_key_icon_no_title</string>
    <string name="settings_preference_key_lock_home_screen">settings_preference_key_lock_home_screen</string>
    <string name="settings_preference_key_recent_style">settings_preference_key_recent_style</string>
    <string name="settings_preference_key_setting_ambiguity_menu">setting_ambiguity_menu</string>
    <string name="settings_preference_key_setting_ambiguity_menu_concise_mode">setting_ambiguity_menu_concise_mode</string>
    <string name="settings_preference_key_setting_ambiguity_menu_no_theme">setting_ambiguity_menu_no_theme</string>
    <string name="settings_preference_key_slide_to_open_what">settings_preference_key_slide_to_open_what</string>
    <string name="settings_preference_key_subscipt">settings_preference_key_subscipt</string>
    <string name="settings_preference_key_unlock_animation">settings_preference_key_unlock_animation</string>
    <string name="settings_recent_style_switch_title">Recent app style</string>
    <string name="settings_title">Home screen settings</string>
    <string name="settings_title_desktop_clock">Desktop Clock</string>
    <string name="slide_to_open_search_title">Swipe down Home screen</string>
    <string name="sort_by_Frequency">Sort by frequency</string>
    <string name="sort_by_Initial">Sort by a-z</string>
    <string name="sort_by_Time">Sort by time</string>
    <string name="talkback_set_home_screen">Set as default Home screen</string>
    <string name="title_minors_mode">Minor mode</string>
    <string name="unlock_animation">Home screen entering animation after unlock</string>
</resources>