<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/settings_home_screen_layout_title" android:key="@string/settings_preference_key_category_home_layout" app:allowDividerAbove="true" app:allowDividerBelow="false" />
    <com.zte.mifavor.androidx.preference.PreferenceZTE android:persistent="true" android:title="@string/settings_home_layout_title" android:key="@string/settings_preference_key_home_layout" app:allowDividerAbove="false" app:allowDividerBelow="false" app:iconSpaceReserved="false" />
    <com.zte.mifavor.androidx.preference.PreferenceZTE android:persistent="true" android:title="@string/settings_desktop_grid_title" android:key="@string/settings_preference_key_desktop_grid" app:allowDividerAbove="false" app:allowDividerBelow="false" app:iconSpaceReserved="false" />
    <androidx.preference.SwitchPreference android:persistent="true" android:title="@string/auto_add_shortcuts_label" android:key="@string/settings_preference_key_add_icon_to_home" android:summary="@string/auto_add_shortcuts_description" android:defaultValue="true" app:iconSpaceReserved="false" />
    <androidx.preference.SwitchPreference android:persistent="true" android:title="@string/lock_home_screen_title" android:key="@string/settings_preference_key_lock_home_screen" android:summary="@string/lock_home_screen_summary" app:iconSpaceReserved="false" />
    <androidx.preference.SwitchPreference android:persistent="true" android:title="@string/auto_align" android:key="@string/settings_preference_key_auto_align" android:summary="@string/auto_align_summary" app:iconSpaceReserved="false" />
    <androidx.preference.SwitchPreference android:persistent="true" android:title="@string/circle_screen_switch_title" android:key="@string/settings_preference_key_circle_scroll" android:summary="@string/circle_screen_switch_summary" app:iconSpaceReserved="false" />
    <com.zte.mifavor.androidx.preference.PreferenceZTE android:persistent="true" android:title="@string/settings_title_desktop_clock" android:key="@string/settings_preference_key_desktop_clock" app:iconSpaceReserved="false" />
    <PreferenceCategory android:key="@string/settings_preference_key_category_home_icon_top" app:allowDividerAbove="false" app:allowDividerBelow="true" />
    <PreferenceCategory android:title="@string/settings_home_screen_icon_title" android:key="@string/settings_preference_key_category_home_icon_bottom" app:allowDividerAbove="true" app:allowDividerBelow="false" />
    <com.zte.mifavor.androidx.preference.PreferenceZTE android:persistent="true" android:key="@string/settings_preference_key_subscipt" app:allowDividerAbove="false" app:allowDividerBelow="false" app:iconSpaceReserved="false" />
    <com.zte.mifavor.androidx.preference.PreferenceZTE android:persistent="true" android:title="@string/app_icons_title" android:key="@string/settings_preference_key_app_icons" app:allowDividerAbove="false" app:allowDividerBelow="false" app:iconSpaceReserved="false" />
    <androidx.preference.SwitchPreference android:persistent="true" android:title="@string/fancy_icon" android:key="@string/settings_preference_key_fancy_icon" android:summary="@string/fancy_icon_summary" app:iconSpaceReserved="false" />
    <androidx.preference.SwitchPreference android:persistent="true" android:title="@string/settings_icon_no_title" android:key="@string/settings_preference_key_icon_no_title" android:summary="@string/settings_icon_no_title_summary" app:iconSpaceReserved="false" />
    <PreferenceCategory android:title="@string/settings_others_title" android:key="@string/settings_preference_key_category_other" app:allowDividerAbove="true" app:allowDividerBelow="true" />
    <com.zte.mifavor.androidx.preference.PreferenceZTE android:persistent="true" android:title="@string/settings_recent_style_switch_title" android:key="@string/settings_preference_key_recent_style" app:allowDividerAbove="false" app:allowDividerBelow="false" app:iconSpaceReserved="false" />
    <com.zte.mifavor.androidx.preference.PreferenceZTE android:persistent="true" android:title="@string/slide_to_open_search_title" android:key="@string/settings_preference_key_slide_to_open_what" app:allowDividerAbove="false" app:allowDividerBelow="false" app:iconSpaceReserved="false" />
    <androidx.preference.SwitchPreference android:persistent="true" android:title="@string/all_apps_recommend_title" android:key="@string/settings_preference_key_app_recommend" app:allowDividerAbove="false" app:allowDividerBelow="false" app:iconSpaceReserved="false" />
    <androidx.preference.SwitchPreference android:persistent="true" android:title="@string/unlock_animation" android:key="@string/settings_preference_key_unlock_animation" app:iconSpaceReserved="false" />
    <androidx.preference.SwitchPreference android:persistent="true" android:title="@string/custom_content_switch_title" android:key="@string/settings_preference_key_custom_page" android:summary="@string/custom_content_switch_summary" app:iconSpaceReserved="false" />
    <com.zte.mifavor.androidx.preference.PreferenceZTE android:persistent="true" android:title="@string/custom_content_switch_title_selection" android:key="@string/settings_preference_key_custom_page_selection" app:allowDividerAbove="false" app:allowDividerBelow="false" app:iconSpaceReserved="false" />
    <androidx.preference.SwitchPreference android:persistent="true" android:title="@string/ai_future_screen_title" android:key="@string/settings_preference_key_ai_future_screen" android:summary="@string/ai_future_screen_summary" app:iconSpaceReserved="false" />
    <androidx.preference.SwitchPreference android:persistent="true" android:title="@string/allow_rotation_title" android:key="pref_allowRotation" app:iconSpaceReserved="false" />
    <PreferenceCategory android:key="@string/settings_preference_key_category_end" app:allowDividerAbove="false" app:allowDividerBelow="true" />
    <com.zte.mifavor.androidx.preference.PreferenceZTE android:layout="@layout/place_holder_padding12" android:selectable="false" android:key="preferenceztex4" app:isCard="false" />
    <com.zte.mifavor.androidx.preference.PreferenceZTE android:layout="@layout/setting_ambiguity_menu" android:selectable="false" android:key="@string/settings_preference_key_setting_ambiguity_menu" app:isCard="false" />
    <com.zte.mifavor.androidx.preference.PreferenceZTE android:layout="@layout/setting_ambiguity_menu_no_theme" android:selectable="false" android:key="@string/settings_preference_key_setting_ambiguity_menu_no_theme" app:isCard="false" />
    <com.zte.mifavor.androidx.preference.PreferenceZTE android:layout="@layout/setting_ambiguity_menu_concise_mode" android:selectable="false" android:key="@string/settings_preference_key_setting_ambiguity_menu_concise_mode" app:isCard="false" />
    <com.zte.mifavor.androidx.preference.PreferenceZTE android:layout="@layout/place_holder_padding12" android:selectable="false" android:key="preferenceztex4" app:isCard="false" />
    <com.zte.mifavor.androidx.preference.PreferenceZTE android:layout="@layout/place_holder_padding12" android:selectable="false" android:key="preferenceztex4" app:isCard="false" />
</androidx.preference.PreferenceScreen>
