<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/overview_panel_text_size" android:textColor="@color/main_menu_text_clolor" android:gravity="center_horizontal" android:id="@id/wallpaper_button" android:layout_width="@dimen/overview_panel_home_menu_icon_width_abroad" android:layout_height="wrap_content" android:text="@string/menu_tab_wallpaper" android:drawablePadding="@dimen/overview_panel_home_menu_icon_padding_text" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/overview_panel_text_size" android:textColor="@color/main_menu_text_clolor" android:gravity="center_horizontal" android:id="@id/widget_button" android:layout_width="@dimen/overview_panel_home_menu_icon_width_abroad" android:layout_height="wrap_content" android:text="@string/main_menu_widget_new" android:drawablePadding="@dimen/overview_panel_home_menu_icon_padding_text" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/overview_panel_text_size" android:textColor="@color/main_menu_text_clolor" android:gravity="center_horizontal" android:id="@id/effect_type_button" android:layout_width="@dimen/overview_panel_home_menu_icon_width_abroad" android:layout_height="wrap_content" android:text="@string/menu_tab_effect" android:drawablePadding="@dimen/overview_panel_home_menu_icon_padding_text" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/overview_panel_text_size" android:textColor="@color/main_menu_text_clolor" android:gravity="center_horizontal" android:id="@id/settings_button" android:layout_width="@dimen/overview_panel_home_menu_icon_width_abroad" android:layout_height="wrap_content" android:text="@string/settings_title" android:drawablePadding="@dimen/overview_panel_home_menu_icon_padding_text" android:layout_weight="1.0" />
</LinearLayout>
