<?xml version="1.0" encoding="utf-8"?>
<com.android.launcher3.iconarrange.IconArrangeTopBar android:layout_gravity="top" android:orientation="horizontal" android:id="@id/icon_arrange_bar" android:paddingTop="@dimen/icon_arrange_topbar_padding_top" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="@dimen/icon_arrange_topbar_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:gravity="center" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_weight="2.0">
        <TextView android:layout_gravity="center" android:id="@id/icon_top_target_text" android:text="@string/icon_top_target_label" android:drawableTop="@drawable/icon_arrange_align_top" style="@style/IconArrangeTargetTextView" />
    </FrameLayout>
    <FrameLayout android:gravity="center" android:layout_gravity="center_vertical" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_weight="1.0">
        <ImageView android:layout_gravity="center" android:id="@id/btn_home_on" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/btn_home_on" android:scaleType="centerInside" android:contentDescription="@string/talkback_set_home_screen" android:alpha="0.0" android:scaleX="0.1" android:scaleY="0.1" />
        <ImageView android:layout_gravity="center" android:id="@id/btn_home_off" android:background="@drawable/home_edit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/btn_home_off" android:scaleType="centerInside" android:contentDescription="@string/talkback_set_home_screen" />
        <TextView android:textSize="@dimen/screen_reorder" android:textColor="@color/screen_reorder" android:layout_gravity="center" android:id="@id/screen_reorder" android:layout_width="wrap_content" android:layout_height="@dimen/home_button_height" android:text="@string/screen_reorder" android:alpha="0.0" />
    </FrameLayout>
    <FrameLayout android:gravity="center" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_weight="2.0">
        <TextView android:layout_gravity="center" android:id="@id/icon_bottom_target_text" android:text="@string/icon_bottom_target_label" android:drawableTop="@drawable/icon_arrange_align_bottom" style="@style/IconArrangeTargetTextView" />
    </FrameLayout>
</com.android.launcher3.iconarrange.IconArrangeTopBar>
