<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/main_content_scrollable_container" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.zte.mifavor.androidx.widget.NestedScrollView android:id="@id/nestedScrollView" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true" android:layout_weight="1.0" android:overScrollMode="never">
        <ScrollView android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                <ImageView android:layout_gravity="center" android:id="@id/setting_feature_phone_mode_image" android:background="@drawable/home_layout_feature_phone_activity" android:layout_width="@dimen/settings_feature_phone_mode_image_width" android:layout_height="@dimen/settings_feature_phone_mode_image_height" android:scaleType="center" />
                <TextView android:textSize="@dimen/settings_feature_phone_mode_title_text_size" android:textColor="@color/mfvc_primary_foreground_color_transp_85" android:layout_gravity="center_horizontal" android:id="@id/setting_feature_phone_mode_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_feature_phone_mode_title_marginTop" android:text="@string/settings_feature_phone_mode_title_content" />
                <TextView android:textSize="@dimen/settings_feature_phone_mode_sub_title_text_size" android:textColor="@color/mfvc_primary_foreground_color_transp_54" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/setting_feature_phone_mode_text1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_feature_phone_mode_title_marginTop" android:text="@string/settings_feature_phone_mode_sub_title_content1" />
                <TextView android:textSize="@dimen/settings_feature_phone_mode_sub_title_text_size" android:textColor="@color/mfvc_primary_foreground_color_transp_54" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/setting_feature_phone_mode_text2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings_feature_phone_mode_sub_title_content2" />
            </LinearLayout>
        </ScrollView>
    </com.zte.mifavor.androidx.widget.NestedScrollView>
    <com.zte.mifavor.widget.ButtonZTE android:layout_gravity="center|bottom" android:id="@id/setting_feature_phone_mode_button" android:layout_width="@dimen/settings_feature_phone_mode_button_width" android:layout_height="@dimen/settings_feature_phone_mode_button_height" android:layout_marginBottom="@dimen/settings_feature_phone_mode_button_margin_bottom" android:text="@string/settings_feature_phone_mode_button_open_content" android:autoSizeTextType="uniform" android:autoSizeMinTextSize="@dimen/settings_feature_phone_mode_button_min_text_size" style="@style/ColorButton" />
</LinearLayout>
